# engineering-conversation

./: .mise.toml  README  README.md  pyproject.toml
homogenisation/clinical_trials/: count_trials_test.py  homogenise_test.py  main.py
