[tool.poetry]
name = "engineering-conversation"
version = "0.1.0"
description = ""
authors = ["Pavlo Kerestey <pvke@novonordisk.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
