[tool.poetry]
name = "engineering-conversation"
version = "0.1.0"
description = ""
authors = ["Pavlo Kerestey <pvke@novonordisk.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.6"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
